# zomato-recommendation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
docs/: execution-checklist.md  improvements.md  phase-wise-architecture-revalidated.md  phase-wise-architecture.md  problemStatement.md
docs/contracts/: phase0-contracts.md
docs/phases/phase-0/: README.md
docs/phases/phase-1/: README.md
docs/phases/phase-2/: README.md
docs/phases/phase-3/: README.md
docs/phases/phase-4/: README.md
docs/phases/phase-5/: README.md
docs/phases/phase-6/: README.md
docs/phases/phase-7/: README.md
scripts/: dev-down.sh  dev-up.sh
src/: __init__.py
src/phases/: __init__.py
src/phases/phase_0/: __init__.py  api.py  schemas.py
src/phases/phase_1/: __init__.py  curate_dataset.py  download_dataset.py  normalization.py  pipeline.py  quality.py
src/phases/phase_2/: __init__.py  config.py  models.py  normalization.py  pipeline.py  retriever.py
src/phases/phase_3/: __init__.py  client.py  config.py  engine.py  pipeline.py  prompt_builder.py
src/phases/phase_4/: __init__.py  api.py  metrics.py  orchestrator.py
src/phases/phase_5/: __init__.py
src/phases/phase_6/: __init__.py  (+2 more)
tests/phase_2/: test_phase2_normalization.py  test_phase2_retrieval.py
tests/phase_3/: test_phase3_engine.py
tests/phase_4/: test_phase4_api.py
tests/phase_6/: test_phase6_eval.py
tests/phase_7/: test_phase7_bootstrap.py
tests/unit/: test_contracts.py  test_download_fallback.py  test_normalization.py  test_quality.py
(+12 files in other folders)
